<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="@string/pref_grp_data">
	  
	  <ListPreference 
	      android:key="LoadSnap-%d"
	      android:summary="@string/picksnap"
	      android:defaultValue="0"
	      android:title="@string/loadSnapshot" />
  		
  		<Preference 
	      android:key="SaveSnap-%d"
	      android:summary="@string/saveText"
	      android:title="@string/save" />
  		
  </PreferenceCategory>
	  
  


  
  
  <PreferenceCategory android:title="@string/behavior">

  	  <Preference
  	        android:key="fixApps-%d"
  	      	android:title="@string/fixAppsOnScreen"
  	      	android:summary="@string/pickApps" 
        	android:persistent = "true"
  	      />
  	  <Preference
  	        android:key="iconNumber-%d"
  	      	android:title="@string/appsPerScreen"
  	      	android:summary="@string/appsPerScreenDescription" 
        	android:persistent = "true"
  	      />
  	   
  	  
  	  <!-- MultiSelectListPreference
  	      	android:key="fixApps-%d"
  	      	android:title="@string/fixAppsOnScreen"
  	      	android:summary="@string/pickApps" 
        	android:persistent = "true"
        	android:defaultValue="@array/empty_array"/-->
  	      	
  	      	 
  	  
  </PreferenceCategory>
  
 <!-- <PreferenceCategory android:title="@string/pref_grp_layout">
	  
	  <ListPreference
	  		android:key="BGImage-%d"
	  		android:summary="@string/black"
	  		android:title="@string/background" />		  		
  
  </PreferenceCategory>
  --> 
  		  	
  <PreferenceCategory android:title="@string/pref_grp_general">
  		
      <Preference 
		    android:title="@string/help" 
		    android:key="help-%d"/>
		    
		<!--android:dialogMessage="@string/helptext" 
		    android:dialogTitle="@string/help_summary"
		    android:negativeButtonText="Forgetabout'it"
		    android:positiveButtonText="OK"/>
		 -->
		           
		
		<Preference 
		    android:title="@string/about" 
		    android:key="ABOUT" />  		
  
  </PreferenceCategory>
  
  <!-- <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/button_text"
    />
 -->
</PreferenceScreen>
